@@ -1,38 +1,36 @@
 package br.com.catsanddogs.catsanddogs.application.config;
 
-import org.apache.commons.lang3.StringUtils;
 import org.slf4j.MDC;
 import org.springframework.stereotype.Component;
-import org.springframework.web.servlet.handler.HandlerInterceptorAdapter;
+import org.springframework.web.servlet.HandlerInterceptor;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import java.util.UUID;
 
 @Component
-public class MdcInterceptor extends HandlerInterceptorAdapter {
+public class MdcInterceptor implements HandlerInterceptor {
 
     private static final String CORRELATION_ID_HEADER_NAME = "X-Correlation-Id";
     private static final String CORRELATION_ID_LOG_VAR_NAME = "correlationId";
 
     @Override
     public boolean preHandle(final HttpServletRequest request, final HttpServletResponse response,
-                             final Object handler) throws Exception {
+                             final Object handler) {
         final String correlationId = getCorrelationIdFromHeader(request);
-
         MDC.put(CORRELATION_ID_LOG_VAR_NAME, correlationId);
         return true;
     }
 
     @Override
     public void afterCompletion(final HttpServletRequest request, final HttpServletResponse response,
-                                final Object handler, final Exception ex) throws Exception {
+                                final Object handler, final Exception ex) {
         MDC.remove(CORRELATION_ID_LOG_VAR_NAME);
     }
 
     private String getCorrelationIdFromHeader(final HttpServletRequest request) {
         String correlationId = request.getHeader(CORRELATION_ID_HEADER_NAME);
-        if (StringUtils.isBlank(correlationId)) {
+        if (correlationId.isBlank()) {
             correlationId = generateUniqueCorrelationId();
         }
         return correlationId;
